<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    tools:context="com.github.jason.android.AnimationFragment"
    tools:showIn="@layout/activity_animation_main"
    android:gravity="top|center">

    <LinearLayout android:id="@+id/image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView android:id="@+id/image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/image_title"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"/>

        <ImageView android:id="@+id/image_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_layout"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:orientation="vertical"
            android:layout_gravity="left"
            android:scrollbars="horizontal">

            <Button android:id="@+id/from_left"
                style="@style/CustomButton"
                android:text="@string/enter_from_left" />

            <Button android:id="@+id/from_right"
                style="@style/CustomButton"
                android:text="@string/enter_from_right" />

            <Button android:id="@+id/from_top"
                style="@style/CustomButton"
                android:text="@string/enter_from_top"/>

            <Button android:id="@+id/from_bottom"
                style="@style/CustomButton"
                android:text="@string/enter_from_bottom"/>

            <Button android:id="@+id/fade_in"
                style="@style/CustomButton"
                android:text="@string/fade_in"/>

            <Button android:id="@+id/layout_anim"
                style="@style/CustomButton"
                android:text="@string/layout_anim"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
